# snaplot

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: tests.yaml  type.yaml
camera/: index.html
docs/: README.qmd  camera.md  contributing.md  index.md
docs/reference/: add_digit.md
docs/stylesheets/: style.css
overrides/partials/: footer.html
scripts/: coverage.sh
search/: search_index.json
snaplot/: __init__.py  main.py
tests/: test_main.py
