[project]
name = "snaplot"
description = "Record and replay every step of your plotting process"
version = "0.2.0"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["matplotlib", "record", "gif", "evolution"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "gifing>=0.1.1",
    "matplotlib>=3.9.4",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["snaplot"]

[tool.uv.sources]
snaplot = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.5",
    "coverage>=7.9.1",
    "genbadge>=1.1.2",
    "ty>=0.0.1a21",
    "plotnine>=0.13.6",
]

[project.urls]
Homepage = "https://y-sunflower.github.io/snaplot/"
Issues = "https://github.com/y-sunflower/snaplot/issues"
Documentation = "https://y-sunflower.github.io/snaplot/"
Repository = "https://github.com/y-sunflower/snaplot"
